# superfast-rust-search-engine

./: .gitignore  Everyting.md  Project.md  README.md  Structure.md  start.bat
.claude/: settings.local.json
Doc/: Architecture Schematic.md  Everyting.md  Project.md  Structure.md
product-search/: .gitignore  Cargo.toml
product-search/scripts/: csv_to_jsonl.py  db_to_jsonl.py  embed_products.py
product-search/src/: benchmark.rs  embedding.rs  indexer.rs  main.rs  proxy.rs  schema.rs  scoring.rs  segment.rs  types.rs
